Update java version from JDK 10 -> 11